@@ -30,8 +30,9 @@ wajig (2.3) unstable; urgency=low
   * Remove wajig shell; I doubt if anyone will miss it, and am too lazy to
     maintain it.
   * Remove the mini-tutorial; me wonders if it was useful to anyone.
+  * Improve usability by limiting verbosity to either True or False.
 
- -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sat, 25 Feb 2012 23:44:42 +0200
+ -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Sun, 26 Feb 2012 00:16:12 +0200
 
 wajig (2.2) unstable; urgency=low
 
